Fix some findbugs and checkstyle errors
[#OCD-2394]